<resources>

    <!--  Context Menu  -->
    <string name="shortcut_series_control_short">Серии</string>
    <string name="shortcut_series_control_long">Контроль серий</string>
    <string name="shortcut_series_control_disabled">Недоступно</string>
    <string name="shortcut_list_of_changes_screen_short">Уведомления</string>
    <string name="shortcut_list_of_changes_screen_long">Уведомления</string>
    <string name="shortcut_list_of_changes_screen_disabled">Недоступно</string>
    <string name="shortcut_list_selected_movies_short">Избранное</string>
    <string name="shortcut_list_selected_movies_long">Личный список</string>
    <string name="shortcut_list_selected_movies_disabled">Недоступно</string>

    <!--  General Strings  -->
    <string name="app_name">Cinema Opinion</string>
    <string name="title_awards_field">Зал славы</string>
    <string name="list_awards_empty">Наград пока нет</string>
    <string name="top_app_bar_header_name_all_movies">Фильмы</string>
    <string name="top_app_bar_header_name_top_list_movies">Топ фильмов</string>
    <string name="top_app_bar_header_name_user_information">Данные пользователя</string>
    <string name="no_movie_title">Нет названия фильма</string>
    <string name="no_year_of_release_of_the_film">Нет года выпуска фильма</string>
    <string name="developer_message">Добро пожаловать в новую версию приложения!</string>
    <string name="developer_message2">Ничего не произошло</string>
    <string name="untitled_movie">Фильм без названия</string>
    <string name="movie_is_not_uploaded">Фильм не загружен</string>
    <string name="animation_for_rotating_icon">Анимация для поворота иконки</string>
    <string name="movie_was_deleted">Фильм удален, страницы нет</string>
    <string name="watched_movies_sup_text">Просмотренных фильмов:</string>

    <!--  TopAppBarTitle  -->
    <string name="title_list_waiting_continuation_series">Лист ожидания</string>
    <string name="title_list_of_changes_series">Уведомления</string>
    <string name="title_for_advanced_search_screen">Расширенный поиск</string>
    <string name="title_for_adding_new_user_screen">Добавление нового пользователя</string>
    <string name="title_account_screen">Профиль</string>
    <string name="title_series_control_screen">Контроль серий</string>
    <string name="title_media_news_screen">Медиа новости</string>
    <string name="title_login_screen">Вход / Регистрация</string>
    <string name="title_listWatched_movies">Просмотренные</string>
    <string name="title_page_description">Что нового:</string>
    <string name="title_page_personal_list">Личный список</string>
    <string name="title_page_movie_list">Список с фильмами</string>

    <!--  Text for Changes Records Screen  -->
    <string name="record_added_comment_to_movie">добавил(а) комментарий к фильму: </string>
    <string name="record_added_comment_to_movie_in_the_viewed">добавил(а) комментарий к фильму в просмотренных: </string>
    <string name="record_added_comment_to_series">добавил(а) комментарий к сериалу: </string>
    <string name="record_movie_has_been_moved_to_viewed">переместил(а) фильм в просмотренные: </string>
    <string name="record_series_has_been_moved_to_viewed">переместил(а) сериал в просмотренные: </string>
    <string name="record_series_has_been_moved_to_waiting_list">переместил(а) сериал в лист ожидания: </string>
    <string name="record_series_has_been_moved_to_series_list">переместил(а) сериал в список с сериалами: </string>
    <string name="record_deleted_the_movie">удалил(а) фильм: </string>
    <string name="record_deleted_the_series">удалил(а) сериал: </string>
    <string name="record_added_movie">добавил(а) фильм: </string>
    <string name="record_added_series">добавил(а) сериал: </string>

    <!--   Text for Drop-Down Menu   -->
    <string name="drop_down_menu_create_shared_list">Создать совместный список</string>
    <string name="drop_down_menu_item_edit">Изменить данные пользователя</string>
    <string name="drop_down_menu_item_settings">Настройки</string>
    <string name="drop_down_menu_item_exit">Сменить пользователя</string>

    <!--   Text for Drop-Down Filter Menu   -->
    <string name="drop_down_menu_item_premiere_movies">Топ фильмы</string>
    <string name="drop_down_menu_item_topList_movies">Фильмы</string>
    <string name="drop_down_menu_item_select_date">Выбрать дату</string>
    <string name="drop_down_menu_item_nac_to_media_news_screen">Медиа новости</string>

    <!--   Text of the fields   -->
    <string name="text_for_edit_nik_name_field">Имя пользователя</string>
    <string name="placeholder_for_edit_nik_name_field">Введите новое имя пользователя</string>
    <string name="placeholder_for_add_lastName_field">Введите фамилию пользователя</string>
    <string name="text_for_add_name_field">Имя пользователя</string>
    <string name="placeholder_for_add_name_field">Введите имя пользователя</string>
    <string name="text_for_edit_email_field">Email</string>
    <string name="placeholder_for_edit_email_field">Введите новый Email</string>
    <string name="text_for_edit_password_field">Пароль</string>
    <string name="placeholder_for_edit_password_field">Введите новый пароль</string>
    <string name="placeholder_for_comment_field">Оставьте свой комментарий</string>
    <string name="text_for_expandedCard_field">Описание</string>
    <string name="enter_the_name_of_the_movie_series">Введите название фильма/сериала</string>
    <string name="text_for_field_change_comment">Измените комментарий</string>
    <string name="text_for_field_create_shared_list">Название таблицы</string>
    <string name="text_for_field_create_shared_list_invited_user_address">Приглашение</string>

    <!--  Text Button  -->
    <string name="button_leave_comment">Оставить комментарий</string>
    <string name="button_viewed">Просмотрен</string>
    <string name="button_registration">Регистрация</string>
    <string name="button_login">Вход</string>
    <string name="button_add">Добавить</string>
    <string name="button_save">Сохранить</string>
    <string name="button_add_to_yourself">Добавить к себе</string>
    <string name="button_add_to_new_year_list">В новогоднюю коллекцию</string>
    <string name="text_buttons_film_card_to_my_list">В свой список</string>
    <string name="text_buttons_film_card_to_shared_list">В совместный список</string>
    <string name="text_buttons_film_card_to_general_list_movies">В общий список с фильмами</string>
    <string name="text_buttons_film_card_to_general_list_serials">В общий список с сериалами</string>
    <string name="button_viewed_screen">Просмотренные</string>
    <string name="button_to_begin">Погнали</string>
    <string name="button_create_shared_list">Создать таблицу</string>
    <string name="button_move_to_series">Переместить в сериалы</string>
    <string name="button_move_to_waiting_list">Переместить в лист ожидания</string>
    <string name="fab_button_with_menu_main_screen">Настройки</string>

    <!--  Content Description  -->
    <string name="content_description_for_button_add">Кнопка добавить</string>

    <!--  ShowToast String  -->
    <string name="movie_has_been_added">Фильм добавлен в личный список</string>
    <string name="movie_has_been_added_to_general_list">Фильм добавлен в общий список</string>
    <string name="movie_has_already_been_added">Данный фильм уже добавлен</string>
    <string name="add_new_account">Пользователь добавлен</string>
    <string name="login_error">Неверно введен логин или пароль</string>
    <string name="login_completed">Вход выполнен</string>
    <string name="edit_personal_information">Данные пользователя обновлены</string>
    <string name="comment_added">Комментарий добавлен</string>
    <string name="element_has_been_added">Элемент добавлен</string>
    <string name="movie_has_been_moved_to_viewed">Фильм успешно перенесен в просмотренные</string>
    <string name="series_has_been_moved_to_viewed">Сериал успешно перенесен в просмотренные</string>
    <string name="series_has_been_moved_to_waiting_list">Сериал успешно перенесен в лист ожидания</string>
    <string name="series_has_been_moved">Сериал успешно перенесен</string>
    <string name="movie_has_been_moved">Фильм успешно перенесен</string>

    <!--  Title Icons  -->
    <string name="my_list_movies">Личный список</string>
    <string name="joint_list_films">Общий список с фильмами</string>
    <string name="joint_list_serials">Общий список с сериалами</string>
    <string name="series_control">Контроль серий</string>
    <string name="shared_lists">Совместные списки</string>
    <string name="floating_action_button_save">Сохранить</string>
    <string name="floating_action_button_settings">Фильтр</string>
    <string name="list_selected_movies_button_close">Закрыть</string>

    <!--  Description Icons  -->
    <string name="description_floating_action_button_save">Floating Button Save</string>
    <string name="description_floating_action_button_settings">Floating Button Settings</string>
    <string name="description_icon_account">Иконка аккаунта</string>
    <string name="description_icon_filter">Иконка фильтра</string>
    <string name="description_clear_text">Clear Text</string>
    <string name="description_icon_search">Иконка поиска</string>
    <string name="description_icon_advanced_search">Иконка расширенного поиска</string>
    <string name="description_icon_edit">Icon Edit</string>
    <string name="description_icon_create_shared_list">Icon Create Shared List</string>
    <string name="description_icon_settings">Icon Settings</string>
    <string name="description_icon_exit">Icon Exit</string>
    <string name="description_icon_movie_list">Icon Movie List</string>
    <string name="description_icon_serials_list">Icon Serials List</string>
    <string name="description_icon_shared_lists">Icon Shared Lists</string>
    <string name="description_icon_series_control">Icon Series Control</string>
    <string name="description_icon_edit_change_name">Icon Edit Change Name</string>
    <string name="description_icon_add_lastName_name">Icon Add Lastname</string>
    <string name="description_icon_add_name">Icon Add Name</string>
    <string name="description_icon_edit_change_lastname">Icon Edit Change Lastname</string>
    <string name="description_icon_home_button">Icon Home Button</string>
    <string name="description_icon_previous_page_button">Icon Previous Page Button</string>
    <string name="description_icon_next_page_button">Icon Next Page Button</string>
    <string name="description_icon_back_button">Icon Back Button</string>
    <string name="description_icon_fab_button_with_menu">Icon FabButtonWithMenu MainScreen</string>

    <!--  Seasonal lines  -->
    <string name="title_of_the_list_for_the_new_year">Почувствуй новый год!</string>
    <string name="record_added_to_new_year_collection">Пополнил(а) коллекцию новогодней подборки: </string>

    <!--  Text Error  -->
    <string name="limit_is_over">К сожалению, в базе пусто или суточный лимит закончился</string>
    
</resources>